Identified an issue where the scrollbar was creating an offset of width between 15 and 16 pixels. I suspect the viewport is including the scrollbar in the width which is causing this issue. I've temporarily added a scrollbar to all pages in an attempt to fix this while I look for another solution

--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
   --section-color: #b26646;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   overflow-x: hidden;
   background: var(--bg-body);
@@ -121,7 +125,6 @@ main {
 .mission {
   display: flex;
   justify-content: center;
-  height: 60;
   text-align: center;
   font-family: 'Open Sans';
   font-weight: 600;
@@ -373,7 +376,7 @@ footer p {
   }
 
   .info {
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 
   .menu-item img {
